[package]
name = "todo-app"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.26.0"

env_logger = { version = "0.11.1", default-features = false, features = [
    "auto-color",
    "humantime",
] }
chrono = "0.4.33"
hex = "0.4.3"
serde = { version = "1.0.196", features = ["derive"] }
sha2 = "0.11.0-pre.3"
serde_json = "1.0.113"
